--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Banking App</string>
+
+    <!-- CardView Labels -->
+    <string name="id_label">id:</string>
+    <string name="description_label">description</string>
+    <string name="other_account_label">other account</string>
+    <string name="date_label">date</string>
 </resources>
